align globalsearch tipps text, fixes #10519
git-svn-id: svn://develop.studip.de/studip/trunk@57072 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/less/globalsearch.less
+++ b/resources/assets/stylesheets/less/globalsearch.less
@@ -69,6 +69,7 @@
 
             + #globalsearch-hints {
                 display: block;
+                white-space: normal !important;
             }
         }
     }
